# raycraft

./: .gitattributes  .gitignore  Cargo.toml  README.md
data/: HDR_029_Sky_Cloudy_Ref.hdr  config.ron  evangelion-1-HDR.hdr  ground-noise.glb  ground.glb  planet.glb  planet.ron  raceFuture-body.glb
data/car-kit/: wheelDark.glb  wheelDefault.glb  wheelRacing.glb  wheelTractorBack.glb  wheelTractorDarkBack.glb  wheelTractorDarkFront.glb  wheelTractorFront.glb  wheelTruck.glb
data/levels/: Fostral.ron  Khox.ron  noise.ron  plane.ron
data/space-kit/: alien.glb  astronautA.glb  astronautB.glb  barrel.glb  barrels.glb  barrels_rail.glb  bones.glb  chimney.glb  chimney_detailed.glb  corridor.glb  corridor_corner.glb  corridor_cornerRound.glb  corridor_cornerRoundWindow.glb  corridor_cross.glb  corridor_detailed.glb  corridor_end.glb  corridor_open.glb  corridor_roof.glb  corridor_split.glb  corridor_wall.glb  corridor_wallCorner.glb  corridor_window.glb  corridor_windowClosed.glb  craft_cargoA.glb  craft_cargoB.glb  craft_miner.glb  craft_racer.glb  craft_speederA.glb  craft_speederB.glb  craft_speederC.glb  craft_speederD.glb  crater.glb  craterLarge.glb  desk_chair.glb  desk_chairArms.glb  desk_chairStool.glb  desk_computer.glb  desk_computerCorner.glb  desk_computerScreen.glb  gate_complex.glb  (+113 more)
data/vehicles/: car.ron  m4.ron  raceFuture.ron  u3.ron
src/: config.rs  engine.rs  main.rs
