[package]
name = "raycraft"
version = "0.1.0"
edition = "2021"

[dependencies]
blade = { path = "../blade" }
egui = "0.23"
egui-winit = "0.23"
env_logger = "0.10"
nalgebra = { version = "0.32", features = ["mint"] }
log = "0.4"
rapier3d = "0.17"
ron = "0.8"
serde = { version = "1", features = ["serde_derive"] }
winit = "0.28"

[patch.crates-io]
rapier3d = { path = "../rapier/crates/rapier3d" }
