[package]
name = "raycraft"
version = "0.1.0"
edition = "2021"

[dependencies]
blade = { path = "../blade" }
egui = "0.28"
egui-winit = "0.28"
env_logger = "0.11"
glam = { version = "0.27", features = ["mint"] }
log = "0.4"
mint = "0.5"
ron = "0.8"
serde = { version = "1", features = ["serde_derive"] }
winit = "0.29"

[patch.crates-io]
